@@ -1,3 +1,8 @@
+2003-09-13  John Levon  <levon@movementarian.org>
+
+	* doc/oprofile.xml: document "incorrect source attribution"
+	a bit
+
 2003-09-12  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libpp/op_header.cpp: typo in comment
